style: fixing overflow hidden issue in safari

--- a/components/store/home/slider/homeSlider.module.scss
+++ b/components/store/home/slider/homeSlider.module.scss
@@ -110,6 +110,7 @@
     height: 100%;
     border-radius: 12px;
     overflow: hidden;
+    transform: translateZ(0);
     top: 0;
     left: 0;
     user-select: none;
